test/klee-out-2/test000002.kquery
array a[8] : w32 -> w8 = symbolic
(query [(Eq 2
             (ReadLSB w64 0 a))]
        false)
